Move driver to several files and make header files for them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,19 @@ project(VirtualCheap C CXX)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set(CMAKE_SHARED_LIBRARY_PREFIX "")
 
-include_directories(../openvr/headers/)
+include_directories(openvr/headers/)
 
 set(SOURCE_FILES
         src/driver_VirtualCheap.cpp
+        src/driver_VirtualCheap.h
+        src/WatchdogDriver_VirtualCheap.cpp
+        src/WatchdogDriver_VirtualCheap.h
+        src/DeviceDriver_VirtualCheap.cpp
+        src/DeviceDriver_VirtualCheap.h
+        src/ServerDriver_VirtualCheap.cpp
+        src/ServerDriver_VirtualCheap.h
         src/driverlog.cpp
         src/driverlog.h
-        src/Tracking.cpp
-        src/Tracking.h
         )
 
 add_definitions(-DDRIVER_SAMPLE_EXPORTS)
