Added resources, driver manifest, and setup auto copy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,5 +19,18 @@ set(SOURCE_FILES
         src/driverlog.h
         )
 
-add_definitions(-DDRIVER_SAMPLE_EXPORTS)
+file(MAKE_DIRECTORY VirtualCheap/bin/linux64/)
+
 add_library("driver_VirtualCheap" SHARED ${SOURCE_FILES})
+
+set_target_properties(driver_VirtualCheap PROPERTIES
+         LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/VirtualCheap/bin/linux64/)
+
+add_custom_command(TARGET driver_VirtualCheap POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_directory
+                ${CMAKE_SOURCE_DIR}/resources/
+                ${CMAKE_CURRENT_BINARY_DIR}/VirtualCheap/resources/)
+add_custom_command(TARGET driver_VirtualCheap POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy
+                ${CMAKE_SOURCE_DIR}/driver.vrdrivermanifest
+                ${CMAKE_CURRENT_BINARY_DIR}/VirtualCheap/driver.vrdrivermanifest)
