--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,14 @@ cmake_minimum_required(VERSION 3.3)
 project(VirtualCheap C CXX)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(CMAKE_SHARED_LIBRARY_PREFIX "")
 
 include_directories(openvr/headers/)
 
-set(SOURCE_FILES
+set(CMAKE_SHARED_LIBRARY_PREFIX "")
+set(CMAKE_SHARED_MODULE_PREFIX "")
+
+add_library(driver_VirtualCheap
+        MODULE
         src/driver_VirtualCheap.cpp
         src/driver_VirtualCheap.h
         src/WatchdogDriver_VirtualCheap.cpp
@@ -20,8 +23,6 @@ set(SOURCE_FILES
         )
 
 file(MAKE_DIRECTORY VirtualCheap/bin/linux64/)
-
-add_library("driver_VirtualCheap" SHARED ${SOURCE_FILES})
 
 set_target_properties(driver_VirtualCheap PROPERTIES
          LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/VirtualCheap/bin/linux64/)
