--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,10 @@ set(SOURCE_FILES
         src/watchdogdriver_virtualcheap.h
         src/devicedriver_virtualcheap.cpp
         src/devicedriver_virtualcheap.h
-        #src/serverdriver_virtualcheap.cpp
-        #src/serverdriver_virtualcheap.h
         src/driverlog.cpp
         src/driverlog.h
+        src/socket.cpp
+        src/socket.h
         )
 
 file(MAKE_DIRECTORY VirtualCheap/bin/linux64/)
